@@ -1,3 +1,4 @@
+from Products.Five.testbrowser import Browser
 from Products.PloneTestCase import ptc
 
 from intranett.policy.tests import layer
@@ -16,3 +17,13 @@ class IntranettFunctionalTestCase(ptc.FunctionalTestCase):
     """ base class for functional tests """
 
     layer = layer.intranett
+
+    def getCredentials(self):
+        return '%s:%s' % (ptc.default_user, ptc.default_password)
+
+    def getBrowser(self, loggedIn=True):
+        browser = Browser()
+        if loggedIn:
+            auth = 'Basic %s' % self.getCredentials()
+            browser.addHeader('Authorization', auth)
+        return browser
