@@ -4,12 +4,15 @@ Changelog
 0.4 - unreleased
 ----------------
 
+- Added convenience methods to functional test case to set up a test browser.
+  [hannosch]
 
 0.3 - 2010-10-07
 ----------------
 
 - Optimized CSS, KSS and JS resource merging.
   This closes https://jira.jarn.com/browse/INTRANETT-60.
+  [hannosch]
 
 - Include ``plone.app.caching`` as a dependency and configure simple caching
   for stable resources, theme resources and feeds This closes
